--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,3 +19,10 @@ logging:
     #org.hibernate.type: TRACE
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
+multipart:
+  max-file-size: 10MB
+  max-request-size: 10MB
+  enabled: treu
+custom:
+  genFile:
+    dirPath: C:\Users\taeng\OneDrive\바탕 화면\work\rest\src\main\resources\static
