--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,4 +25,4 @@ multipart:
   enabled: treu
 custom:
   genFile:
-    dirPath: C:\Users\taeng\OneDrive\바탕 화면\work\rest\src\main\resources\static
+    dirPath: C:\Users\SBS\Desktop\work\techno_market\src\main\resources\static
