게시물 이미지 구현중

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,4 +25,4 @@ multipart:
   enabled: treu
 custom:
   genFile:
-    dirPath: C:\Users\SBS\Desktop\work\techno_market\src\main\resources\static
+    dirPath: C:\Users\techno_market_image
