회원가입 진행중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     include: secret
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
+  data:
+    jpa:
+      repositories:
+        enabled: true
 
 
 
