검색 카테고리 마무리

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ logging:
 multipart:
   max-file-size: 10MB
   max-request-size: 10MB
-  enabled: treu
+  enabled: true
 custom:
   genFile:
     dirPath: C:\Users\techno_market_image
