--- a/frontapp/package.json
+++ b/frontapp/package.json
@@ -24,6 +24,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.6.7",
+		"svelte-kit": "^1.2.0",
 		"svelte-routing": "^2.11.0",
 		"swiper": "^11.0.5"
 	}
