--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,21 @@ spring:
     jpa:
       repositories:
         enabled: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: rhkddhks12@gmail.com
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          timeout: 5000
+          starttls:
+            enable: true
+            logging:
+              level:
+                org.springframework.mail: DEBUG
 
 
 
