--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for techno-market on 2024-03-20T16:46:48+09:00
+# fly.toml app configuration file generated for techno-market-proud-river-6139 on 2024-03-20T17:03:54+09:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'techno-market'
+app = 'techno-market-proud-river-6139'
 primary_region = 'nrt'
 
 [build]
